created About us

--- a/aboutus.html
+++ b/aboutus.html
@@ -49,117 +49,126 @@
         </ul>
       </nav>
 <!------------------------------------------------------Header---------------------------------------------------->
-    <!-- <div style="position:absolute; top:400px; left:400px; font-size: 100px; font-weight:bold;">Get Back Soon....</div> -->
-
-    <!------------------------------------------------------Product row1---------------------------------------------------->
-<div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow:auto;"> 
-    <div class="row mb-3">
-      <div class="col-sm-12 ">
-        <h4 class="cd-h4 mt-3 mb-3">Palm Flower
-        </h4>
-        <div class="card-group">
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%; margin-left: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" style="margin:5px; max-height:200px; max-width:200px; ;" alt="lap1" class="image-fluid">
-            <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
-              <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
-          </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap2" class="image-fluid">
-            <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
-          </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap3" class="image-fluid">
-            <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
-          </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; max-height:200px; max-width:200px; " alt="lap4" class="image-fluid">
-            <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
-          </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_5e8e4650.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap5" class="image-fluid">
-            <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
-          </div>
-         
+<h3 class="navbar-brand" href="i"><span id="bd-title"><img src="images/logo.jpg" style="max-height:50px;">Hopeshore</span></h3>
+<p>Hopeshore Special School located at Kadalundi was founded with the noble objective 
+    of empowering the children with special needs who are sidelined from the mainstream of 
+    society. The school provides education and therapy to specially-abled children hailing from 
+    the lower socio-economic groups. The team at Hopeshore is very supportive and sensitive 
+    to the needs of an alarming number of children with special needs who are the victims of 
+    negligence. Such children are doubly disadvantaged due to the lack of parental awareness 
+    about their needs, social stigma and poor financial access to special education and therapy. 
+    </p>
+    <p>Hopeshore Charitable Trust is a nononprofit organisation dedicated to the rehabilitation 
+        of the children with special needs. The trust aims at enabling these children to lead a dignified 
+        life by catering to their special needs. It has proposed to take up various charitable initiatives 
+        to provide services to such children and prevent apathy towards them.</p>
+    <p>
+    Hopeshore Special School is at the service of children with a wide range of disabilities 
+    such as Cerebral Palsy, Autism, mental retardation, learning disability, Attention deficit 
+    disorder, Behaviour disorder, speech and language disorders etc. We at Hopeshore offer 
+    complete range of clinical services from pediatric assessment to therapies. Education and 
+    therapies like occupational therapy, speech therapy, psychotherapy, physiotherapy and 
+    remedial education are provided completely free of cost for underprivileged children.</p>
+    <!---------------------------------------------------Psychology---------------------------------------------->
+    <div class="container">
+        <div class="text-content">
+            <h2>Psychology</h2>
+            <p>Clinical child psychologists are 
+                primarily specialized in understanding 
+                the basic psychological needs of children 
+                and adolescents and how the family and 
+                social contexts influence their cognitive 
+                development, socio-emotional adjustment, 
+                behavioral adaptation and health status.</p>
         </div>
-      </div>
-    </div>
-  </div>
-  
-  <!------------------------------------------------------Product row 1---------------------------------------------------->
-
-   <!------------------------------------------------------Product row2---------------------------------------------------->
-<div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow:auto;"> 
-    <div class="row mb-3">
-      <div class="col-sm-12 ">
-        <div class="card-group">
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%; margin-left: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" style="margin:5px; max-height:200px; max-width:200px; ;" alt="lap1" class="image-fluid">
-            <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
-              <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
-          </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap2" class="image-fluid">
-            <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
-          </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap3" class="image-fluid">
-            <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
-          </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; max-height:200px; max-width:200px; " alt="lap4" class="image-fluid">
-            <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
-          </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_5e8e4650.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap5" class="image-fluid">
-            <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
-          </div>
-         
+        <div class="image-container">
+            <img src="images/Album/IMG_0233.JPG" alt="Image description">
+            <p></p>
         </div>
-      </div>
     </div>
-  </div>
-  
-  <!------------------------------------------------------Product row2---------------------------------------------------->
-
-   <!------------------------------------------------------Footer---------------------------------------------------->
+    <!---------------------------------------------------Psychology---------------------------------------------->
+    <!-- -----------------------------------------------Special Education---------------------------------------->
+    <div class="container">
+        <div class="image-container">
+            <img src="images/Album/IMG_0233.JPG" alt="Image description">
+            <p></p>
+        </div>
+        <div class="text-content">
+            <h2>Special Education</h2>
+            <p>Special Education focuses 
+                on systematically monitored 
+                teaching procedures with adapted 
+                equipments and materials to help 
+                learners with special needs achieve 
+                a higher level of personal self-sufficiency and success at school 
+                and community</p>
+        </div>
+    </div>
+    <!-- -----------------------------------------------Special Education---------------------------------------->
+    <!--------------------------------------------------Physio Therapy------------------------------------------->
+    <div class="container">
+        <div class="text-content">
+            <h2>Physio Therapy</h2>
+            <p>Pediatric physiotherapy deals with the 
+                treatment of children who need range of motion, 
+                strength, coordination, postural control, quality of 
+                movement and gross motor development.
+                Paediatric physiotherapy plays an integral 
+                role in comprehensive rehabilitation of children 
+                with Cerebral palsy, Delayed milestones, 
+                Congenital syndromes,Traumatic brain injury, 
+                Premature birth or Any post surgical orthopedic 
+                conditions
+                Early diagnosis and treatment help children 
+                to improve their functional mobility & strength 
+                making them more independent.</p>
+        </div>
+        <div class="image-container">
+            <img src="images/Album/IMG_0233.JPG" alt="Image description">
+            <p></p>
+        </div>
+    </div>
+    <!--------------------------------------------------Physio Therapy------------------------------------------->
+    <!--------------------------------------------------Speech Therapy------------------------------------------->
+    <div class="container">
+        <div class="image-container">
+            <img src="images/Album/IMG_0233.JPG" alt="Image description">
+            <p></p>
+        </div>
+        <div class="text-content">
+            <h2>Speech Therapy</h2>
+            <p>Speech-language therapy helps to 
+                coordinate the mechanics of speech with the 
+                social use of language. Speech therapy focuses 
+                on:
+                <p style="font-weight: bold;">Ability to understand language</p>
+                <p style="font-weight: bold;">  Ability to use ideas to express</p>
+                When a speech or language problem is 
+                identified and treated early in a child, it is unlikely 
+                that the problem will persist or get worse</p>
+        </div>
+    </div>
+    <!--------------------------------------------------Speech Therapy------------------------------------------->
+    <!--------------------------------------------------Occupational Therapy-------------------------------------->
+    <div class="container">
+        <div class="text-content">
+            <h2>Occupational Therapy</h2>
+            <p>Occupational Therapy’s (OT) primary 
+                goal is to assist children and adolescents to 
+                reach their individual potential while participating in daily life routines at home, school and 
+                in the community. Skills include self-feeding, 
+                dressing, personal care, play, social skills and 
+                home tasks. Additionally, Occupational Therapists address visual skills and cognitive abilities as they relate to everyday tasks. They help 
+                the child learn to work with their limitations 
+                whether they are physical or sensory based</p>
+        </div>
+        <div class="image-container">
+            <img src="images/Album/IMG_0233.JPG" alt="Image description">
+            <p></p>
+        </div>
+    </div>
+    <!--------------------------------------------------Occupational Therapy-------------------------------------->
+<!------------------------------------------------------Footer---------------------------------------------------->
 <footer class="footdes">
     <div class="container-fluid footer-1">
         <div class="row">
@@ -216,5 +225,4 @@
 <script src="node_modules\bootstrap\dist\js\bootstrap.js"></script>
 <script src="js/Script.js"></script>
 </body>
-
 </html>
