Product layout changed

--- a/Palm Flowers.html
+++ b/Palm Flowers.html
@@ -52,106 +52,100 @@
     <!-- <div style="position:absolute; top:400px; left:400px; font-size: 100px; font-weight:bold;">Get Back Soon....</div> -->
 
     <!------------------------------------------------------Product row1---------------------------------------------------->
-<div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow:auto;"> 
-    <div class="row mb-3">
-      <div class="col-sm-12 ">
-        <h4 class="cd-h4 mt-3 mb-3">Palm Flower
-        </h4>
-        <div class="card-group">
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%; margin-left: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" style="margin:5px; max-height:200px; max-width:200px; ;" alt="lap1" class="image-fluid">
-            <div class="card-body cd-txt">
+    <div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow: auto;"> 
+      <div class="row mb-3" >
+        <div class="col-sm-12 " >
+          <div class="card-group" >
+            <div class="card col-sm-4 col-lg-2 card2sty" >
+              <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" style="margin:5px; height: 100%; width: 100%; " alt="lap1" class="image-fluid">
               <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
-              <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
+              <div class="card-body cd-txt">
+                <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
+              </div>
             </div>
-          </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap2" class="image-fluid">
-            <div class="card-body cd-txt">
+            <div class="card col-sm-4 col-lg-2 card2sty" >
+              <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" style="margin:5px; height: 100%; width: 100%; border-radius: 30px ;" alt="lap2" class="image-fluid">
+              <h4 class="card-title cd-title">Acer</h4>
+              <div class="card-body cd-txt">
+                <p class="card-text txt-sz"></p>
+               <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
+              </div>
+            </div>
+            <div class="card col-sm-4 col-lg-2 card2sty" >
+              <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" style="margin:5px; height: 100%; width: 100%; border-radius: 30px ;" alt="lap3" class="image-fluid">
               <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
+              <div class="card-body cd-txt">
+                <p class="card-text txt-sz"></p>
+               <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
+              </div>
             </div>
-          </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap3" class="image-fluid">
-            <div class="card-body cd-txt">
+            <div class="card col-sm-4 col-lg-2 card2sty" >
+              <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; height: 100%; width: 100%; border-radius: 30px ; " alt="lap4" class="image-fluid">
               <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
-          </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; max-height:200px; max-width:200px; " alt="lap4" class="image-fluid">
-            <div class="card-body cd-txt">
+              <div class="card-body cd-txt">
+                <p class="card-text txt-sz"></p>
+               <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
+              </div>
+            </div>   
+            <div class="card col-sm-4 col-lg-2 card2sty" >
+              <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; height: 100%; width: 100%; border-radius: 30px ; " alt="lap4" class="image-fluid">
               <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
+              <div class="card-body cd-txt">
+                <p class="card-text txt-sz"></p>
+               <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
+              </div>
+            </div>  
           </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_5e8e4650.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap5" class="image-fluid">
-            <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
-             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
-            </div>
-          </div>
-         
         </div>
       </div>
     </div>
-  </div>
   
   <!------------------------------------------------------Product row 1---------------------------------------------------->
 
    <!------------------------------------------------------Product row2---------------------------------------------------->
-<div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow:auto;"> 
-    <div class="row mb-3">
-      <div class="col-sm-12 ">
-        <div class="card-group">
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%; margin-left: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" style="margin:5px; max-height:200px; max-width:200px; ;" alt="lap1" class="image-fluid">
+   <div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow: auto;"> 
+    <div class="row mb-3" >
+      <div class="col-sm-12 " >
+        <div class="card-group" >
+          <div class="card col-sm-4 col-lg-2 card2sty" >
+            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" style="margin:5px; height: 100%; width: 100%; " alt="lap1" class="image-fluid">
+            <h4 class="card-title cd-title">##</h4>
             <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
-              <p class="card-text txt-sz"></p>
               <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
             </div>
           </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap2" class="image-fluid">
+          <div class="card col-sm-4 col-lg-2 card2sty" >
+            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" style="margin:5px; height: 100%; width: 100%; border-radius: 30px ;" alt="lap2" class="image-fluid">
+            <h4 class="card-title cd-title">Acer</h4>
             <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
               <p class="card-text txt-sz"></p>
              <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
             </div>
           </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap3" class="image-fluid">
+          <div class="card col-sm-4 col-lg-2 card2sty" >
+            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" style="margin:5px; height: 100%; width: 100%; border-radius: 30px ;" alt="lap3" class="image-fluid">
+            <h4 class="card-title cd-title">##</h4>
             <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
               <p class="card-text txt-sz"></p>
              <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
             </div>
           </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; max-height:200px; max-width:200px; " alt="lap4" class="image-fluid">
+          <div class="card col-sm-4 col-lg-2 card2sty" >
+            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; height: 100%; width: 100%; border-radius: 30px ; " alt="lap4" class="image-fluid">
+            <h4 class="card-title cd-title">##</h4>
             <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
               <p class="card-text txt-sz"></p>
              <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
             </div>
-          </div>
-          <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_5e8e4650.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap5" class="image-fluid">
+          </div>   
+          <div class="card col-sm-4 col-lg-2 card2sty" >
+            <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; height: 100%; width: 100%; border-radius: 30px ; " alt="lap4" class="image-fluid">
+            <h4 class="card-title cd-title">##</h4>
             <div class="card-body cd-txt">
-              <h4 class="card-title cd-title">##</h4>
               <p class="card-text txt-sz"></p>
              <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
             </div>
-          </div>
-         
+          </div>  
         </div>
       </div>
     </div>
