--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 <!------------------------------------------------------Carousel---------------------------------------------------->
 
 <!------------------------------------------------------Cards---------------------------------------------------->
-<div class="container-fluid pt-2pb-2" style="background-color:#F0FFFF; border-bottom:1px solid darkgray;">
+<h4 class="cd-h4 mt-2 mb-2">Popular Collections</h4>
+<div class="container-fluid pt-2pb-2" style="background-color:#ffffff; border-bottom:0px solid rgba(255, 0, 0, 0);">
   <div class="row">
     <div class="col-sm-12">
       <div id="inm" class="carousel slide" data-ride="carousel">
@@ -94,9 +95,10 @@
             <div class="container">
               <div class="row">
                   <div class="col-sm-6 col-lg-3">
-                    <div class="card" >
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.12_1a6b17e3.jpg" class="img-fluid" alt="card1">
-                        <div class="card-body">
+                    <div class="card"  id="card">
+                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.12_1a6b17e3.jpg"  class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%;"> 
+                      <!-- <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.12_1a6b17e3.jpg"  class="img-fluid" alt="card1" style="border-radius: 50px;  width: 40%; height: 50%;">  -->
+                      <div class="card-body">
                           <h4 class="card-title">Detol Soap</h4>
                           <p class="card-text"> </p>
                           <a href="https://wa.link/labfw2"><button class="btn btn-warning bb-btn1" type="button">Buy</button></a>
@@ -104,8 +106,8 @@
                     </div>
                   </div>
                   <div class="col-sm-6 col-lg-3 mm">
-                    <div class="card">
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.19_fb3b52c5.jpg" class="img-fluid" alt="card1">
+                    <div class="card" id="card">
+                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.19_fb3b52c5.jpg" class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%; margin: 0;">
                         <div class="card-body">
                           <h4 class="card-title">Pampers</h4>
                           <p class="card-text"> </p>
@@ -114,8 +116,8 @@
                     </div>
                   </div>  
                   <div class="col-sm-6 col-lg-3 mm">
-                    <div class="card">
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.19_fb3b52c5.jpg" class="img-fluid" alt="card1">
+                    <div class="card" id="card">
+                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.19_fb3b52c5.jpg" class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%; ">
                         <div class="card-body">
                           <h4 class="card-title">Keyboard</h4>
                           <p class="card-text"> </p>
@@ -124,8 +126,8 @@
                     </div>
                   </div>   
                   <div class="col-sm-6 col-lg-3 mm">
-                    <div class="card">
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.21_d50d448f.jpg" class="img-fluid" alt="card1">
+                    <div class="card" id="card">
+                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.21_d50d448f.jpg" class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%; ">
                         <div class="card-body">
                           <h4 class="card-title">Detol Handwash</h4>
                           <p class="card-text"> </p>
@@ -141,8 +143,8 @@
             <div class="container">
               <div class="row">
                   <div class="col-sm-6 col-lg-3">
-                    <div class="card" >
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.19_fb3b52c5.jpg" class="img-fluid" alt="card1">
+                    <div class="card" id="card" >
+                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.19_fb3b52c5.jpg" class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%; ">
                         <div class="card-body">
                           <h4 class="card-title">Freedom Oil</h4>
                           <p class="card-text"> </p>
@@ -152,7 +154,7 @@
                   </div>
                   <div class="col-sm-6 col-lg-3">
                     <div class="card">
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.20_5c013741.jpg" class="img-fluid" alt="card1">
+                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.20_5c013741.jpg" class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%; ">
                         <div class="card-body">
                           <h4 class="card-title">Cpu Cabinet</h4>
                           <p class="card-text"> </p>
@@ -161,8 +163,8 @@
                     </div>
                   </div>  
                   <div class="col-sm-6 col-lg-3">
-                    <div class="card">
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.22_9c3d2dce.jpg" class="img-fluid" alt="card1">
+                    <div class="card" id="card">
+                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.22_9c3d2dce.jpg" class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%; ">
                         <div class="card-body">
                           <h4 class="card-title">Pampers</h4>
                           <p class="card-text"> </p>
@@ -171,8 +173,8 @@
                     </div>
                   </div>   
                   <div class="col-sm-6 col-lg-3">
-                    <div class="card">
-                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.14_d144d3b4.jpg" class="img-fluid" alt="card1">
+                    <div class="card" id="card">
+                      <img src="images\Products\WhatsApp Image 2024-04-22 at 20.30.14_d144d3b4.jpg" class="img-fluid" alt="card1" style="border-radius: 50px;  width: 100%; height: 50%; ">
                         <div class="card-body">
                           <h4 class="card-title">Keyboard</h4>
                           <p class="card-text"> </p>
@@ -209,58 +211,61 @@
 <!------------------------------------------------------Banner---------------------------------------------------->
 
 <!------------------------------------------------------Card2---------------------------------------------------->
-<div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow:auto;"> 
-  <div class="row mb-3">
-    <div class="col-sm-12 ">
+<div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow: auto;"> 
+  <div class="row mb-3" >
+    <div class="col-sm-12 " >
       <h4 class="cd-h4 mt-3 mb-3">Our Latest Collections</h4>
-      <div class="card-group">
-        <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%; margin-left: 5%;">
-          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" style="margin:5px; max-height:200px; max-width:200px; ;" alt="lap1" class="image-fluid">
+      <div class="card-group" >
+        <div class="card col-sm-4 col-lg-2 card2sty" >
+          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.38_72c793e9.jpg" style="margin:5px; height: 100%; width: 100%; " alt="lap1" class="image-fluid">
+          <h4 class="card-title cd-title">##</h4>
           <div class="card-body cd-txt">
-            <h4 class="card-title cd-title">Dell Inspiron</h4>
-            <p class="card-text txt-sz"></p>
             <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
           </div>
         </div>
-        <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap2" class="image-fluid">
+        <div class="card col-sm-4 col-lg-2 card2sty" >
+          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_32bc2ec7.jpg" style="margin:5px; height: 100%; width: 100%; border-radius: 30px ;" alt="lap2" class="image-fluid">
+          <h4 class="card-title cd-title">Acer</h4>
           <div class="card-body cd-txt">
-            <h4 class="card-title cd-title">Acer</h4>
             <p class="card-text txt-sz"></p>
            <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
           </div>
         </div>
-        <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap3" class="image-fluid">
+        <div class="card col-sm-4 col-lg-2 card2sty" >
+          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_1c38d72d.jpg" style="margin:5px; height: 100%; width: 100%; border-radius: 30px ;" alt="lap3" class="image-fluid">
+          <h4 class="card-title cd-title">##</h4>
           <div class="card-body cd-txt">
-            <h4 class="card-title cd-title">Apple MAC</h4>
             <p class="card-text txt-sz"></p>
            <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
           </div>
         </div>
-        <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; max-height:200px; max-width:200px; " alt="lap4" class="image-fluid">
+        <div class="card col-sm-4 col-lg-2 card2sty" >
+          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; height: 100%; width: 100%; border-radius: 30px ; " alt="lap4" class="image-fluid">
+          <h4 class="card-title cd-title">##</h4>
           <div class="card-body cd-txt">
-            <h4 class="card-title cd-title">Hp Pavilion</h4>
             <p class="card-text txt-sz"></p>
            <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
           </div>
-        </div>
-        <div class="card col-sm-4 col-lg-2 card2sty" style="border-radius: 50%; margin-right: 5%;">
-          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_5e8e4650.jpg" style="margin:5px; max-height:200px; max-width:200px;" alt="lap5" class="image-fluid">
+        </div>   
+        <div class="card col-sm-4 col-lg-2 card2sty" >
+          <img src="images\Products\WhatsApp Image 2024-04-23 at 19.23.39_ef9203ea.jpg" style="margin: 5px; height: 100%; width: 100%; border-radius: 30px ; " alt="lap4" class="image-fluid">
+          <h4 class="card-title cd-title">##</h4>
           <div class="card-body cd-txt">
-            <h4 class="card-title cd-title">Lenovo Ideapad</h4>
             <p class="card-text txt-sz"></p>
            <a href="https://wa.link/labfw2" class="btn btn-warning bb-btn" style="right: 36%;">Buy</a>
           </div>
-        </div>
-       
+        </div>  
       </div>
     </div>
   </div>
 </div>
 
 <!------------------------------------------------------Card2---------------------------------------------------->
+<!------------------------------------------------------Card3---------------------------------------------------->
+<div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow: auto; height: 100;"> 
+<div ></div> 
+</div>
+<!------------------------------------------------------Card3---------------------------------------------------->
 
 <!------------------------------------------------------Albums---------------------------------------------------->
 <div class="container-fluid" style="background-color:#F0F8FF; border-bottom:1px solid darkgray; overflow:hidden;">
@@ -358,7 +363,6 @@
           <span class="carousel-control-next-icon card-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-
       </div>
     </div>
   </div>
